--- a/test2/test.html
+++ b/test2/test.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id='app'>
-        <p>{{name}}</p>
+        <!-- v-forでJSONの中身を値の数だけ回す -->
         <div v-for="(item,i) in results">
 
             id:{{item.id}}<br>
@@ -21,8 +21,11 @@
 
         </div>
     </div>
+    <!-- vue.jsのCDN -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <!-- JSONを扱うためのCDN -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <!-- JSの読み込み -->
     <script src="./script.js"></script>
 </body>
 
