--- a/test4/test2.html
+++ b/test4/test2.html
@@ -12,12 +12,22 @@
     <div id='app'>
         <!-- v-forでJSONの中身を値の数だけ回す -->
         <div v-for="(item,i) in results">
-
             <p>----------------------------</p>
             id:{{item.id}}<br>
-            name:{{item.username}}<br>
-            mail:{{item.mail}}<br>
+            name:{{item.hotel_name}}<br>
             address:{{item.address}}<br>
+            checkin:{{item.checkin}}<br>
+            capacity:{{item.capacity}}<br>
+            tag_1:{{item.tag_1}}<br>
+            tag_2:{{item.tag_2}}<br>
+            tag_3:{{item.tag_3}}<br>
+            tag_4:{{item.tag_4}}<br>
+            tag_5:{{item.tag_5}}<br>
+            tag_6:{{item.tag_6}}<br>
+            tag_7:{{item.tag_7}}<br>
+            tag_8:{{item.tag_8}}<br>
+            tag_9:{{item.tag_9}}<br>
+            tag_10:{{item.tag_10}}<br>
 
         </div>
     </div>
@@ -26,7 +36,7 @@
     <!-- JSONを扱うためのCDN -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- JSの読み込み -->
-    <script src="./script.js"></script>
+    <script src="./script2.js"></script>
 </body>
 
 </html>
