test4のtest2.htmlとscript2.jsをホテルIDで検索した値のホテル情報を表示できるように改修

--- a/test4/test2.html
+++ b/test4/test2.html
@@ -10,6 +10,12 @@
 
 <body>
     <div id='app'>
+        <p>
+            <span>ホテルID</span>
+            <input v-model="num" type="number" id="num" />
+            <button @click="search">探す</button>
+        </p>
+
         <!-- v-forでJSONの中身を値の数だけ回す -->
         <div v-for="(item,i) in results">
             <p>----------------------------</p>
