DB変更による調整

--- a/test5/test2.html
+++ b/test5/test2.html
@@ -24,16 +24,16 @@
             address:{{item.address}}<br>
             checkin:{{item.checkin}}<br>
             capacity:{{item.capacity}}<br>
-            tag_1:{{tags.tag1[item.tag_1]}}<br>
-            tag_2:{{tags.tag2[item.tag_2]}}<br>
-            tag_3:{{tags.tag3[item.tag_3]}}<br>
-            tag_4:{{tags.tag4[item.tag_4]}}<br>
-            tag_5:{{tags.tag5[item.tag_5]}}<br>
-            tag_6:{{tags.tag6[item.tag_6]}}<br>
-            tag_7:{{tags.tag7[item.tag_7]}}<br>
-            tag_8:{{tags.tag8[item.tag_8]}}<br>
-            tag_9:{{tags.tag9[item.tag_9]}}<br>
-            tag_10:{{tags.tag10[item.tag_10]}}<br>
+            tag_1:{{item.tag_1}}<br>
+            tag_2:{{item.tag_2}}<br>
+            tag_3:{{item.tag_3}}<br>
+            tag_4:{{item.tag_4}}<br>
+            tag_5:{{item.tag_5}}<br>
+            tag_6:{{item.tag_6}}<br>
+            tag_7:{{item.tag_7}}<br>
+            tag_8:{{item.tag_8}}<br>
+            tag_9:{{item.tag_9}}<br>
+            tag_10:{{item.tag_10}}<br>
 
         </div>
 
