--- a/test8/test.html
+++ b/test8/test.html
@@ -20,28 +20,24 @@
         </p>
         <button @click="hotel_tag_search">探す</button>
         <p>検索キーワード:{{keyword}}</p>
-        <div v-for="(item,i) in hotelids">
-            {{item.hotel_id}}
-            <div v-for="(item2,i2) in hotels">
-                <div v-if="item.hotel_id==item2.id">
-                    id:{{item2.id}}<br>
-                    name:{{item2.hotel_name}}<br>
-                    address:{{item2.address}}<br>
-                    checkin:{{item2.checkin}}<br>
-                    capacity:{{item.capacity}}<br>
-                    tag_1:{{item2.tag_1}}<br>
-                    tag_2:{{item2.tag_2}}<br>
-                    tag_3:{{item2.tag_3}}<br>
-                    tag_4:{{item2.tag_4}}<br>
-                    tag_5:{{item2.tag_5}}<br>
-                    tag_6:{{item2.tag_6}}<br>
-                    tag_7:{{item2.tag_7}}<br>
-                    tag_8:{{item2.tag_8}}<br>
-                    tag_9:{{item2.tag_9}}<br>
-                    tag_10:{{item2.tag_10}}<br>
-                </div>
-            </div>
+        <div v-for="(item,i) in hotels">
             <p>----------------------------</p>
+            id:{{item.id}}<br>
+            name:{{item.hotel_name}}<br>
+            address:{{item.address}}<br>
+            checkin:{{item.checkin}}<br>
+            capacity:{{item.capacity}}<br>
+            tag_1:{{item.tag_1}}<br>
+            tag_2:{{item.tag_2}}<br>
+            tag_3:{{item.tag_3}}<br>
+            tag_4:{{item.tag_4}}<br>
+            tag_5:{{item.tag_5}}<br>
+            tag_6:{{item.tag_6}}<br>
+            tag_7:{{item.tag_7}}<br>
+            tag_8:{{item.tag_8}}<br>
+            tag_9:{{item.tag_9}}<br>
+            tag_10:{{item.tag_10}}<br>
+
         </div>
     </div>
     <!-- vue.jsのCDN -->
