--- a/test9/test.html
+++ b/test9/test.html
@@ -10,34 +10,49 @@
 
 <body>
     <div id='app'>
-        <p>
-            <span>tag_number</span>
-            <input v-model="tag_no" type="text" />
-        </p>
-        <p>
-            <span>キーワード</span>
-            <input v-model="keyword" type="text" />
-        </p>
-        <button @click="hotel_tag_search">探す</button>
-        <p>検索キーワード:{{keyword}}</p>
-        <div v-for="(item,i) in hotels">
-            <p>----------------------------</p>
-            id:{{item.id}}<br>
-            name:{{item.hotel_name}}<br>
-            address:{{item.address}}<br>
-            checkin:{{item.checkin}}<br>
-            capacity:{{item.capacity}}<br>
-            tag_1:{{item.tag_1}}<br>
-            tag_2:{{item.tag_2}}<br>
-            tag_3:{{item.tag_3}}<br>
-            tag_4:{{item.tag_4}}<br>
-            tag_5:{{item.tag_5}}<br>
-            tag_6:{{item.tag_6}}<br>
-            tag_7:{{item.tag_7}}<br>
-            tag_8:{{item.tag_8}}<br>
-            tag_9:{{item.tag_9}}<br>
-            tag_10:{{item.tag_10}}<br>
 
+        <select v-model="selectdata">
+            <option>ホテル</option>
+            <option>旅館</option>
+            <option>ビジネス</option>
+            <option>カジュアル</option>
+        </select>
+        <button @click="">探す</button>
+        <p>
+            <span>朝食</span>
+            <input type="checkbox" v-model="chk1" @change="chk_1">
+        </p>
+        <p><span>昼食</span>
+            <input type="checkbox" v-model="chk2" @change="chk_2">
+        </p>
+        <p><span>夕食</span>
+            <input type="checkbox" v-model="chk3" @change="chk_3">
+        </p>
+        <p><span>tag_4</span>
+            <input type="checkbox" v-model="chk4" @change="chk_4">
+        </p>
+        <p><span>tag_5</span>
+            <input type="checkbox" v-model="chk5" @change="chk_5">
+        </p>
+        <div v-for="(item,i) in hotels">
+            <div v-if="count <= item.num">
+                <p>----------------------------</p>
+                id:{{item.id}}<br>
+                name:{{item.hotel_name}}<br>
+                address:{{item.address}}<br>
+                checkin:{{item.checkin}}<br>
+                capacity:{{item.capacity}}<br>
+                tag_1:{{item.tag_1}}<br>
+                tag_2:{{item.tag_2}}<br>
+                tag_3:{{item.tag_3}}<br>
+                tag_4:{{item.tag_4}}<br>
+                tag_5:{{item.tag_5}}<br>
+                tag_6:{{item.tag_6}}<br>
+                tag_7:{{item.tag_7}}<br>
+                tag_8:{{item.tag_8}}<br>
+                tag_9:{{item.tag_9}}<br>
+                tag_10:{{item.tag_10}}<br>
+            </div>
         </div>
     </div>
     <!-- vue.jsのCDN -->
