--- a/test10/test.html
+++ b/test10/test.html
@@ -28,10 +28,10 @@
         <p><span>夕食</span>
             <input type="checkbox" v-model="chk3" @change="chk_3">
         </p>
-        <p><span>tag_4</span>
+        <p><span>禁煙</span>
             <input type="checkbox" v-model="chk4" @change="chk_4">
         </p>
-        <p><span>tag_5</span>
+        <p><span>スイート</span>
             <input type="checkbox" v-model="chk5" @change="chk_5">
         </p>
         <div v-for="(item,i) in hotels">
