--- a/html/M2-2.html
+++ b/html/M2-2.html
@@ -4,13 +4,6 @@
 <head>
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 	<title>Sign in</title>
-	<style></style>
-	<!--Loginボタンの遷移先-->
-	<script type="text/javascript">
-        function Kensaku(){
-                window.location.href = "kensaku.html";
-        }
-    </script>
 	<!--bootstrapを読み込むリンク-->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -20,6 +13,7 @@
 	<link rel="stylesheet" href="M2-2.css">
 </head>
 <body>
+	<div id='app'>
     <div class="container">
 		<!--文字-->
 		<div class="row md-4">
@@ -32,11 +26,11 @@
 			<div class="bak">
 				<!--IDのテキストボックス-->
 				<div class="col-md-12">
-					<input type="text" class="form-control" id="ID" placeholder="ID">
+					<input type="text" class="form-control" id="ID" placeholder="ID" v-model="user_id">
 				</div>
 				<!--PassWordのテキストボックス-->
 				<div class="col-md-12">
-					<input type="text" class="form-control" id="Pass" placeholder="Pass Word">
+					<input type="text" class="form-control" id="Pass" placeholder="Pass Word" v-model="pass">
 				</div>
 			</div>
 		</div>
@@ -44,7 +38,7 @@
 			<div class="col-md-12">
 				<!--Loginボタン-->
 				<div class="bt d-grid gap-2">
-					<button class="btn btn-warning btn-lg text-white" type="button" onclick="Kensaku()">Login</button>
+					<button class="btn btn-warning btn-lg text-white" @click="login">Login</button>
 				</div>
 			</div>
 		</div>
@@ -52,10 +46,12 @@
 			<a href="M2-1.html">Create Acount</a>
 		</div>
 	</div>
-	<!--bootstrapを読み込むリンク-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-		crossorigin="anonymous">
-	</script>
+</div>
+	<!-- vue.jsのCDN -->
+	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+	<!-- JSONを扱うためのCDN -->
+	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+	<!-- JSの読み込み -->
+	<script src="./M2-2vue.js"></script>
 </body>
 </html>
