--- a/html/H1-1.html
+++ b/html/H1-1.html
@@ -87,7 +87,7 @@
         <a href="."><div class="iconBook"></div>予約一覧</a>
       </li>
       <li class="liNav">
-        <a href="."><div class="iconMypage"></div>マイページ</a>
+        <a href="./M1-1.html"><div class="iconMypage"></div>マイページ</a>
       </li>
     </ul>
   </nav>
