--- a/html/H1-1.html
+++ b/html/H1-1.html
@@ -16,16 +16,16 @@
       <div id="app">
         <el-carousel :interval="5000" trigger="click" height="250px">
           <el-carousel-item>
-            <img src="https://drive.google.com/uc?export=view&id=1yP_4LaYnwnMZGMc1e9G74TI91kxiygrs&usp=sharing" alt="">
+            <img src="./photo/view/view_1.jpg" alt="">
           </el-carousel-item>
           <el-carousel-item>
-            <img src="https://drive.google.com/uc?export=view&id=1Ze6lDzyf-cYfQhzbxQkgzQCxRhXYBSOx&usp=sharing" alt="">
+            <img src="./photo/view/view_2.jpg" alt="">
           </el-carousel-item>
           <el-carousel-item>
-            <img src="https://drive.google.com/uc?export=view&id=1SeIJN7RcN84C0RMVPhd0_52M84l8vTL1&usp=sharing" alt="">
+            <img src="./photo/view/view_3.jpg" alt="">
           </el-carousel-item>
           <el-carousel-item>
-            <img src="https://drive.google.com/uc?export=view&id=1r8d_SN3vKAPqzFgdYRbjaIinPq81kbVv&usp=sharing" alt="">
+            <img src="./photo/view/view_4.jpg" alt="">
           </el-carousel-item>
         </el-carousel>
       </div>
@@ -36,16 +36,16 @@
       <div id="img">
           <el-carousel :interval="4000" type="card" height="200px">
           <el-carousel-item>
-            <img src="https://drive.google.com/uc?export=view&id=1yP_4LaYnwnMZGMc1e9G74TI91kxiygrs&usp=sharing" alt="">
+            <img src="./photo/sea/sea_6.jpg" alt="">
           </el-carousel-item>
           <el-carousel-item>
-            <img src="https://drive.google.com/uc?export=view&id=1Ze6lDzyf-cYfQhzbxQkgzQCxRhXYBSOx&usp=sharing" alt="">
+            <img src="./photo/sea/sea_7.jpg" alt="">
           </el-carousel-item>
           <el-carousel-item>
-            <img src="https://drive.google.com/uc?export=view&id=1SeIJN7RcN84C0RMVPhd0_52M84l8vTL1&usp=sharing" alt="">
+            <img src="./photo/sea/sea_8.jpg" alt="">
           </el-carousel-item>
           <el-carousel-item>
-            <img src="https://drive.google.com/uc?export=view&id=1r8d_SN3vKAPqzFgdYRbjaIinPq81kbVv&usp=sharing" alt="">
+            <img src="./photo/sea/sea_9.jpg" alt="">
           </el-carousel-item>
           </el-carousel>
       </div>
