--- a/html/H1-1.html
+++ b/html/H1-1.html
@@ -36,7 +36,7 @@
       <div id="img">
           <el-carousel :interval="4000" type="card" height="200px">
           <el-carousel-item>
-            <img src="./photo/sea/sea_6.jpg" alt="">
+            <a href="./C1-1.html"><img src="./photo/sea/sea_6.jpg" alt=""></a>
           </el-carousel-item>
           <el-carousel-item>
             <img src="./photo/sea/sea_7.jpg" alt="">
