K1-1完成orY1-1セッション以外完了

--- a/html/C1-1x.html
+++ b/html/C1-1x.html
@@ -113,12 +113,12 @@
                     </a>
                 </li>
                 <li class="liNav">
-                    <a href="./M1-1.html">
+                    <a href="./R1-1.html">
                         <div class="iconBook"></div>予約一覧
                     </a>
                 </li>
                 <li class="liNav">
-                    <a href=".">
+                    <a href="./M1-1.html">
                         <div class="iconMypage"></div>マイページ
                     </a>
                 </li>
