--- a/html/M2-4.html
+++ b/html/M2-4.html
@@ -43,12 +43,12 @@
         </a>
       </li>
       <li class="liNav">
-        <a href=".">
+        <a href="./K1-1.html">
           <div class="iconSearch"></div>検索
         </a>
       </li>
       <li class="liNav">
-        <a href=".">
+        <a href="./R1-1.html">
           <div class="iconBook"></div>予約一覧
         </a>
       </li>
