--- a/html/H1-1.html
+++ b/html/H1-1.html
@@ -19,16 +19,16 @@
         <div id="app">
           <el-carousel :interval="5000" trigger="click" height="250px">
             <el-carousel-item>
-              <img src="./photo/view/view_1.jpg" alt="">
+              <img src="./photo/snow/snow_1.jpg" alt="">
             </el-carousel-item>
             <el-carousel-item>
               <img src="./photo/view/view_2.jpg" alt="">
             </el-carousel-item>
             <el-carousel-item>
-              <img src="./photo/view/view_3.jpg" alt="">
+              <img src="./photo/sea/sea_9.jpg" alt="">
             </el-carousel-item>
             <el-carousel-item>
-              <img src="./photo/view/view_4.jpg" alt="">
+              <img src="./photo/sea/sea_11.jpg" alt="">
             </el-carousel-item>
           </el-carousel>
         </div>
@@ -39,13 +39,13 @@
         <div id="img">
           <el-carousel :interval="4000" type="card" height="200px">
             <el-carousel-item>
-              <img src="./photo/sea/sea_6.jpg" alt="" @click="clickimg(1)">
+              <img src="./photo/hotel/hotel_12.jpg" alt="" @click="clickimg(1)">
             </el-carousel-item>
             <el-carousel-item>
-              <img src="./photo/sea/sea_7.jpg" alt="">
+              <img src="./photo/ryokan/ryokan_1.jpg" alt="">
             </el-carousel-item>
             <el-carousel-item>
-              <img src="./photo/sea/sea_8.jpg" alt="">
+              <img src="./photo/ryokan/ryokan_15.jpg" alt="">
             </el-carousel-item>
             <el-carousel-item>
               <img src="./photo/sea/sea_9.jpg" alt="">
@@ -53,28 +53,6 @@
           </el-carousel>
         </div>
       </div>
-      <p>hogehogehogehogehogehogehogehogehoge</p>
-      <p>hogehogehogehogehogehogehogehogehoge</p>
-      <p>hogehogehogehogehogehogehogehogehoge</p>
-      <p>hogehogehogehogehogehogehogehogehoge</p>
-      <p>hogehogehogehogehogehogehogehogehoge</p>
-      <p>hogehogehogehogehogehogehogehogehoge</p>
-      <p>hogehogehogehogehogehogehogehogehoge</p>
-      <p>hogehogehogehogehogehogehogehogehoge</p>
-      <p>hogehogehogehogehogehogehogehogehoge</p>
-      <p>hogehogehogehogehogehogehogehogehoge</p>
-      <p>hogehogehogehogehogehogehogehogehoge</p>
-      <p>hogehogehogehogehogehogehogehogehoge</p>
-      <p>hogehogehogehogehogehogehogehogehoge</p>
-      <p>hogehogehogehogehogehogehogehogehoge</p>
-      <p>hogehogehogehogehogehogehogehogehoge</p>
-      <p>hogehogehogehogehogehogehogehogehoge</p>
-      <p>hogehogehogehogehogehogehogehogehoge</p>
-      <p>hogehogehogehogehogehogehogehogehoge</p>
-      <p>hogehogehogehogehogehogehogehogehoge</p>
-      <p>hogehogehogehogehogehogehogehogehoge</p>
-      <p>hogehogehogehogehogehogehogehogehoge</p>
-      <p>hogehogehogehogehogehogehogehogehoge</p>
     </main>
 
 
